--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         </a>
       </div>  
       <div class="td">
-        <a class="bn bn_4" href="download/Портфолио.zip" download>
+        <a class="bn bn_4" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
           Скачать П-О-Р-Т-Ф-О-Л-И-О
         </a>
       </div>  
@@ -389,7 +389,7 @@
                   <a class="bn bn_1" href="portfolio/dontek24/detail.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/dontek24.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/dontek24" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -406,7 +406,7 @@
                   <a class="bn bn_1" href="portfolio/LoudSound/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/LoudSound.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/LoudSound" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -423,7 +423,7 @@
                   <a class="bn bn_1"href="portfolio/biopodushka/basket.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/biopodushka.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/biopodushka" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -509,7 +509,7 @@
                   <a class="bn bn_1" href="portfolio/Result. estate/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/Result. estate.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/Result.%20estate" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -527,7 +527,7 @@
                   <a class="bn bn_1" href="portfolio/sorbents/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/sorbents.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/sorbents" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -547,7 +547,7 @@
                   <a class="bn bn_1" href="portfolio/бродобрей/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/бродобрей.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/бродобрей" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -564,7 +564,7 @@
                   <a class="bn bn_1" href="portfolio/N-B2B/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/N-B2B.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/N-B2B" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -581,7 +581,7 @@
                   <a class="bn bn_1"href="portfolio/калькулятор клининговых услуг/index.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/калькулятор клининговых услуг.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main/portfolio/калькулятор%20клининговых%20услуг" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -668,7 +668,7 @@
                   <a class="bn bn_1" href="js-slider.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/js-plugins.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -679,7 +679,7 @@
                   <a class="bn bn_1" href="js-tabs.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/js-plugins.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -690,7 +690,7 @@
                   <a class="bn bn_1" href="js-scrollbar.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/js-plugins.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -701,7 +701,7 @@
                   <a class="bn bn_1" href="js-carousel.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/js-plugins.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
@@ -712,7 +712,7 @@
                   <a class="bn bn_1" href="js-modal-window.html">
                     Посмотреть <span class="bn-1">Web-сайт</span>
                   </a>
-                  <a class="bn bn_2" href="download/js-plugins.zip" download>
+                  <a class="bn bn_2" href="https://github.com/ij0b/portfolio/tree/main" target="_blank">
                     Скачать <span class="bn-1">код Web-сайта</span>
                   </a>
                   <div class="slider__txt-1">
