--- a/portfolio.html
+++ b/portfolio.html
@@ -237,9 +237,9 @@
         </li>
         <li class="ol1-li">
           <div class="txt2 txt2_1">
-            Частичная занятость, неполное рабочее время, гибкий график. 
+            Частичная занятость, неполное рабочее время, гибкий график.<br>
             В основном 20ч в неделю 
-            (Начало ПН, 6.6&nbsp;часов х 3&nbsp;дня / 5&nbsp;ч х 4&nbsp;дня в неделю). 
+            (Начало ПН, 6.6&nbsp;часов х 3&nbsp;дня / 5&nbsp;ч х 4&nbsp;дня в неделю). <br>
             Плюс возможность по собственной инициативе сделать дополнительные задачи до 40ч в месяц.
           </div>  
           <div class="txt3">
@@ -274,7 +274,7 @@
           изучения. 
           <div class="txt3">
             <div class="txt4">
-              В планах со временем сократить время диалогов.
+              Планирую со временем сократить время диалогов:
             </div>
             <ul class="ul1">
               <li class="ul1-li">
@@ -287,7 +287,7 @@
                 сделал в автономном режиме
               </li>
               <li class="ul1-li">
-                отправил на следующий этап
+                отправил на следующий этап разработки
               </li>
             </ul>
           </div>
@@ -396,7 +396,7 @@
                     Dontek24 (CRM) 
                   </div>   
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагины: scrollbar, select2, datepicker, datatables, bootstrap)
+                    1. Технологии: html, css, jQuery (плагины: scrollbar, select2, datepicker, datatables, bootstrap)
                   </div>     
                   <div class="slider__txt-2">
                     2. Добавлено множество своих скриптов, к примеру: кнопка скролла старницы вверх, табы
@@ -413,7 +413,7 @@
                     LoudSound (интернет-магазин)
                   </div>
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагины: maskedinput, lightslider, nivo-slider, ninja-slider, fancybox)
+                    1. Технологии: html, css, jQuery (плагины: maskedinput, lightslider, nivo-slider, ninja-slider, fancybox)
                   </div> 
                   <div class="slider__txt-2">
                     2. Добавлено множество своих скриптов, к примеру: прогресс бар, поле добавления количества товара, рейтинг, счётчик обратного отсчёта и т.д.
@@ -430,7 +430,7 @@
                     Biopodushka (интернет-магазин)
                   </div>
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагины: maskedinput, fancybox)
+                    1. Технологии: html, css, jQuery (плагины: maskedinput, fancybox)
                   </div> 
                   <div class="slider__txt-2">
                     2. Добавлено множество своих скриптов, к примеру: меню с расчётом координат движения курсора по треугольной траектории
@@ -516,7 +516,7 @@
                     Result.estate (лендинг):
                   </div>       
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, JavaScript(полностью на чистом js)
+                    1. Технологии: html, css, JavaScript (полностью на чистом js)
                   </div>  
                   <div class="slider__txt-2">
                     2. Свои скрипты (видео, модальное окно, селект, меню, фильтр, анимация вариантов недвижимости, 
@@ -534,7 +534,7 @@
                     Sorbents (интернет-магазин):
                   </div>
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагин owlcarousel)
+                    1. Технологии: html, css, jQuery + JS (плагин owlcarousel)
                   </div>
                   <div class="slider__txt-2">
                     2. Добавил свои скрипты расчёта сумм и объемов товаров
@@ -554,7 +554,7 @@
                     Бродобрей (лендинг):
                   </div>
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагин jcarousel)
+                    1. Технологии: html, css, jQuery (плагин jcarousel)
                   </div>
                   <div class="slider__txt-2">
                     2. Добавил свои скрипты: табы, добавление функциональности видео, под новый дизайн
@@ -571,7 +571,7 @@
                     N-B2B (интернет-магазин):
                   </div>
                   <div class="slider__txt-2">
-                    1. Технологии: html, css, jQuery(плагины owlcarousel, maskedinput)
+                    1. Технологии: html, css, jQuery + JS (плагины owlcarousel, maskedinput)
                   </div>
                   <div class="slider__txt-2">
                     2. Добавил свои скрипты (модальное окно, количество в инпутах, табы, селект и ряд других)
