--- a/portfolio.html
+++ b/portfolio.html
@@ -203,7 +203,22 @@
           БЭМ
         </li>
         <li class="li">
+          Ajax
+        </li>
+        <li class="li">
+          PHP
+        </li>
+        <li class="li">
           VBA
+        </li>
+        <li class="li">
+          Emmet
+        </li>
+        <li class="li">
+          Pug
+        </li>
+        <li class="li">
+          API
         </li>
       </ul>
     </div>
