--- a/portfolio.html
+++ b/portfolio.html
@@ -319,14 +319,16 @@
           <div class="txt3">
             <ul class="ul1">
               <li class="ul1-li">
-                через несколько лет применить технический английский
-                и язык программирования (к примеру Python, C, VBA), 
-                который применяется в frontend-разработке, а также
-                имеет широкое распространение за рамками этой сферы.
+                После формирования высокого уровня навыков frontend-разработки, 
+                интересно совмещение/дополнение с 
+                <span class="txt5">C#/.NET-разработкой</span>, возможно
+                применение и других языков программирования в веб-разработке, 
+                таких как <span class="txt5">C++</span>, Python, для 
+                <span class="txt5">разработки приложений в добавлении к сайту.</span>
               </li>
               <li class="ul1-li">
-                некоторые задачи решать в оффлайн-режиме, к примеру
-                с тетрадью, составляя алгоритм, и далее реализуя в коде.
+                некоторые задачи решать в оффлайн-режиме, к примеру с тетрадью, 
+                <span class="txt5">составляя алгоритм</span>, и далее реализуя в коде.
               </li>
             </ul>
           </div>
