Edit - view 1.6. Full time.

--- a/portfolio80+.html
+++ b/portfolio80+.html
@@ -240,24 +240,8 @@
           <span class="txt2">Полностью удаленная работа через интернет.</span>
         </li>
         <li class="ol1-li">
-          <div class="txt2">
-            Официальное трудоустройство.
-          </div>
-        </li>
-        <li class="ol1-li">
           <div class="txt2 txt2_1">
-            Гибкий график.
-          </div>  
-        </li>
-        <li class="ol1-li">
-          <div class="txt2">
-            Применение стандартных технологий frontend-разработки применяемых на уровнях Junior, Middle, Senior:
-            HTML, CSS, Препроцессоры, JS, Gulp, Webpack, Git, Vue.js и т.д.
-          </div>
-        </li>
-        <li class="ol1-li">
-          <div class="txt2 txt2_1">
-            Оплата по ставке в час с ростом по мере развития профессиональных навыков или сдельная оплата (труд оплачивается в зависимости от выполненного объема работ).
+            Сдельная оплата. Труд оплачивается в зависимости от выполненного объема работ.
           </div>
           К примеру задача №50 - оплата за решение 5000р. Решаю задачу, зарабатываю 5000р,
           не решаю, не зарабатываю. Или решаю задачу не за 4ч, а за 8ч, что мотивирует
@@ -266,10 +250,39 @@
           При таком подходе у меня возникает большая мотивация,
           т.к. видны критерии оценки труда в форме ТЗ_задачи/оплаты, так интересней.
         </li>
-        
         <li class="ol1-li">
           <div class="txt2 txt2_1">
-            Консультация с сотрудниками по рабочему процессу или наставничество или менторство.
+            Частичная занятость, неполное рабочее время, гибкий график.<br>
+            В основном 20ч в неделю 
+            (Начало ПН, 6.6&nbsp;часов х 3&nbsp;дня / 5&nbsp;ч х 4&nbsp;дня в неделю). <br>
+            Плюс возможность по собственной инициативе сделать дополнительные задачи до 40ч в месяц.
+          </div>  
+          <div class="txt3">
+            <div class="txt4">
+              Возможные графики:
+            </div>
+            <ul class="ul1">
+              <li class="ul1-li">
+                4&nbsp;часа x 5&nbsp;дней в неделю + добавление часов доп. задач по собственной инициативе
+              </li>
+              <li class="ul1-li">
+                5&nbsp;часов х 4&nbsp;дней в неделю + добавление часов доп. задач по собственной инициативе
+              </li>
+              <li class="ul1-li">
+                6.6&nbsp;часов х 3&nbsp;дня в неделю + добавление часов доп. задач по собственной инициативе
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="ol1-li">
+          <div class="txt2">
+            Применение стандартных технологий frontend-разработки:
+            HTML, CSS, Препроцессоры, JS, Gulp, Webpack, Git, Vue.js
+          </div>
+        </li>
+        <li class="ol1-li">
+          <div class="txt2 txt2_1">
+            Консультация с сотрудниками по рабочему процессу.
           </div>
           Разбор ошибок/поиск более оптимизированных решений. Некоторые факты из теории. 
           Для решения актуальных задач ссылки на письменые источники для самостоятельного
@@ -292,6 +305,11 @@
                 отправил на следующий этап разработки
               </li>
             </ul>
+          </div>
+        </li>
+        <li class="ol1-li">
+          <div class="txt2">
+            Официальное трудоустройство.
           </div>
         </li>
         <li class="ol1-li">
