Edit - view 1.7. Full tume.

--- a/portfolio.html
+++ b/portfolio.html
@@ -252,7 +252,7 @@
         <li class="ol1-li">
           <div class="txt2">
             Применение стандартных технологий frontend-разработки применяемых на уровнях Junior, Middle, Senior:
-            HTML, CSS, Препроцессоры, JS, Gulp, Webpack, Git, Vue.js и т.д.
+            HTML, CSS, Препроцессоры, JS, Gulp, Webpack, Git, React, Vue и т.д.
           </div>
         </li>
         <li class="ol1-li">
